# shumlib

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPPLINT.cfg  LICENCE  Makefile  README.md  fortitude.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: checks.yaml  ci.yaml  docs.yaml
cmake/: PreventInSourceBuilds.cmake  ShumOptions.cmake  ShumlibVersions.cmake
common/: Makefile-version  shumlib_version.c  shumlib_version.h
common/src/: f_version_mod.f90.in  shumlib_version.c  shumlib_version.h
doc/: API-SHUM-CONSTANTS.rst  API-SHUM-FIELDSFILE-CLASSES.rst  API-SHUM-FIELDSFILE.rst  API-SHUM-SPIRAL-SEARCH.rst  API-SHUM-THREAD-UTILS.rst  API-SHUM-WGDOS-PACKING.rst  DEVELOP.rst  INSTALL.rst  README.rst  conf.py  index.rst
doc/API_REF/: API-SHUM-BYTESWAP.rst  API-SHUM-CONSTANTS.rst  API-SHUM-FIELDSFILE-CLASSES.rst  API-SHUM-FIELDSFILE.rst  API-SHUM-HORIZONTAL-FIELD-INTERP.rst  API-SHUM-LATLON-EQ-GRIDS.rst  API-SHUM-NUMBER-TOOLS.rst  API-SHUM-SPIRAL-SEARCH.rst  API-SHUM-STRING-CONV.rst  API-SHUM-THREAD-UTILS.rst  API-SHUM-WGDOS-PACKING.rst  CONTENTS.rst  TECHNICAL-SHUM-THREAD-UTILS.rst
doc/_static/: custom.css
fcm-make/: fcm-make.cfg
fcm-make/meto-x86-ifort/: shum-lib-general.cfg
fruit/: CMakeLists.txt  Makefile-driver  fruit.f90  fruit_driver.f90.in  fruit_f90_generator.rb  fruit_f90_source.txt
make/: meto-ex1a-crayftn12.0.1+-craycc.mk  meto-ex1a-gfortran-gcc.mk  meto-x86-gfortran-gcc.mk  meto-x86-ifort-clang.mk  meto-x86-ifort-gcc.mk  meto-x86-nagfor-gcc.mk  meto-x86-portland-gcc.mk  meto-xc40-crayftn-craycc.mk  meto-xc40-crayftn8.4.0+-craycc.mk  meto-xc40-gfortran-gcc.mk  meto-xc40-ifort-icc.mk  ncas-xc30-crayftn-craycc.mk  nci-x86-ifort-icc.mk  niwa-pwr6-xlf-xlc.mk  niwa-x86-gfortran-gcc.mk  niwa-xc50-ifort-icc.mk  uoe-emps-gfortran-gcc.mk  uoe-emps-ifort-gcc.mk  vm-x86-gfortran-gcc.mk
scripts/: meto_install_shumlib.sh
shum_byteswap/src/: CMakeLists.txt  Makefile  f_shum_byteswap.F90  f_shum_byteswap.f90
shum_byteswap/test/: CMakeLists.txt  fruit_test_shum_byteswap.F90  fruit_test_shum_byteswap.f90
shum_constants/src/: CMakeLists.txt  Makefile
shum_constants/test/: CMakeLists.txt
shum_data_conv/src/: CMakeLists.txt  Makefile  c_shum_data_conv.c  f_shum_data_conv.f90
shum_drhook_dummy/src/: parkind1.F90  yomhook.F90
shum_fieldsfile/src/: CMakeLists.txt  Makefile  f_shum_fieldsfile.f90
shum_fieldsfile/test/: CMakeLists.txt  fruit_test_shum_fieldsfile.f90
shum_fieldsfile_class/src/: CMakeLists.txt  f_shum_field.f90  f_shum_file.f90
shum_fieldsfile_class/test/: CMakeLists.txt  fruit_test_shum_fieldsfile_class.f90
shum_horizontal_field_interp/src/: CMakeLists.txt  f_shum_horizontal_field_interp.f90
shum_horizontal_field_interp/test/: CMakeLists.txt  fruit_test_shum_horizontal_field_interp.f90
shum_kinds/src/: CMakeLists.txt
shum_kinds/test/: CMakeLists.txt
shum_latlon_eq_grids/src/: CMakeLists.txt  f_shum_latlon_eq_grids.f90
shum_latlon_eq_grids/test/: CMakeLists.txt
shum_number_tools/src/: CMakeLists.txt  f_shum_is_denormal.F90  f_shum_is_inf.F90  f_shum_is_nan.F90
shum_number_tools/test/: CMakeLists.txt
shum_spiral_search/src/: CMakeLists.txt  c_shum_spiral_search.f90  f_shum_spiral_search.f90
shum_spiral_search/test/: CMakeLists.txt  fruit_test_shum_spiral_search.f90
shum_string_conv/src/: CMakeLists.txt  Makefile
shum_string_conv/test/: CMakeLists.txt
shum_thread_utils/src/: CMakeLists.txt  c_shum_thread_utils.h  f_shum_thread_utils.f90
shum_thread_utils/test/: CMakeLists.txt  c_fruit_test_shum_thread_utils.c  c_fruit_test_shum_thread_utils.h  fruit_test_shum_thread_utils.f90
shum_wgdos_packing/src/: CMakeLists.txt  Makefile  c_shum_wgdos_packing.f90  f_shum_wgdos_packing.f90
shum_wgdos_packing/test/: CMakeLists.txt  fruit_test_shum_wgdos_packing.F90  fruit_test_shum_wgdos_packing.f90
